--- a/aula-14-11/style.css
+++ b/aula-14-11/style.css
@@ -133,4 +133,9 @@ footer {
     header {
         height: 300px;
     }
+
+    #img-personalidade, #img-banda {
+        height: 400px;
+        width: 400px;
+    }
 }
