--- a/aula-14-11/style.css
+++ b/aula-14-11/style.css
@@ -39,14 +39,17 @@ nav > a {
     justify-content: space-evenly;
     align-items: flex-end;
     font-size: 1.5em;
-    color: white;
-    text-decoration: none;
     padding: 10px;
     border-bottom: 5px solid transparent;
 }
 
 nav > a:hover {
     border-bottom-color: #ffffff;
+}
+
+a {
+    color: white;
+    text-decoration: none;
 }
 
 nav {
@@ -79,7 +82,7 @@ section {
     max-width: 500px;
     margin: 10px;
     overflow: hidden;
-    padding: 10px;
+    
     align-content: center;
 }
 
