--- a/aula-14-11/style.css
+++ b/aula-14-11/style.css
@@ -132,6 +132,11 @@ footer {
     margin-top: auto;
 }
 
+footer a {
+    color: white;
+    text-decoration: none;
+}
+
 @media only screen and (max-width: 768px) {
     header {
         height: 300px;
