--- a/aula-14-11/style.css
+++ b/aula-14-11/style.css
@@ -117,10 +117,70 @@ main > h1 {
     width: 500px;
 }
 
-p {
+.bloco > p {
     text-align: justify;
     line-height: 1.5em;
     text-indent: 30px;
+}
+
+.wrap-bloco-album{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.bloco-album {
+    display: flex;
+    flex-direction: column;
+    justify-content: baseline;
+    align-items: baseline;
+
+    max-width: 500px;
+    margin: 10px;
+    overflow: hidden;
+}
+
+.bloco-album > p {
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.capa-album {
+    display: block;
+    background-size: cover;
+    background-position: center center;
+    height: 300px;
+    width: 300px;
+}
+
+
+#definitely-maybe {
+    background-image: url('images/Oasis-Packshot-Definitely-Maybel-499x500-1.jpg');
+}
+
+#whats-the-story {
+    background-image: url('images/whats-the-story-morning-glory-disc-1-4de93e4bc1c6f-800x800.jpg');
+}
+
+#be-here-now {
+    background-image: url('images/oasis-be-here-now-cover.jpeg');
+}
+
+#standing {
+    background-image: url('images/1.jpg');
+}
+
+#heaten-chemistry {
+    background-image: url('./images/1-2.jpg');
+}
+
+#dont-believe {
+    background-image: url('./images/Screen-shot-2014-02-07-at-12.10.05-499x500-1.png');
+}
+
+#dig-out {
+    background-image: url('./images/1-3.jpg');
 }
 
 footer {
