--- a/aula-14-11/style.css
+++ b/aula-14-11/style.css
@@ -8,6 +8,7 @@ html, body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+    line-height: 1.6;
 }
 
 header {
@@ -22,17 +23,40 @@ header {
     flex-wrap: wrap;
 }
 
+#header-pagina-inicial {
+    height: 120px;
+}
+
+header > a > h1, h1 {
+    margin: 20px;
+}
+
 h1 {
     display: flex;
     align-items: center;
-    padding: 0px 5px 0px 5px;
+    padding: 0px 5px;
 }
 
-#nome-banda {
+.nome-banda {
     font-family: Helvetica;
     font-style: italic;
     font-size: 3em;
 } 
+
+nav, #bloco-redes {
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+
+nav > a, #bloco-redes > a {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: flex-end;
+    font-size: 1.5em;
+    padding: 10px;
+    border-bottom: 5px solid transparent;
+}
 
 nav > a {
     display: flex;
@@ -52,17 +76,61 @@ a {
     text-decoration: none;
 }
 
-nav {
-    display: flex;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-}
-
-section {
+section, .menu {
     display: flex;
     flex-direction: row;
     justify-content: center;
     flex-wrap: wrap;
+}
+
+.bloco-menu {
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    background-color: black;
+    color: white;
+    height: 450px;
+    width: 250px;
+    margin: 5px;
+    transition-duration: .5s;
+}
+
+.bloco-menu:hover {
+    height: 460px;
+    width: 310px;
+    transition-duration: .5s;
+}
+
+#texto-menu > h1 {
+    justify-content: center;
+    font-size: xx-large;
+}
+
+#texto-menu {
+    background: linear-gradient(0deg, rgba(0,0,0,0.8183648459383753) 50%, rgba(0,0,0,0) 100%);
+    width: 100%;
+}
+
+.img-menu {
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+}
+
+.img-menu--historia {
+    background-image: url('images/Tour-Bus-October-1994-opt.jpg');
+}
+
+.img-menu--discografia {
+    background-image: url('images/Oasis-Packshot-Definitely-Maybel-499x500-1.jpg');
+}
+
+.img-menu--premios {
+    background-image: url('images/awards.jpg');
+}
+
+.img-menu--redes-sociais {
+    background-image: url('images/oasis.jpg');
 }
 
 .wrap-bloco {
@@ -74,7 +142,7 @@ section {
     flex-wrap: wrap;
 }
 
-#fonte-branca {
+.fonte-branca {
     color: white;
 }
 
@@ -86,32 +154,33 @@ section {
     align-content: center;
 }
 
+main {
+    padding-bottom: 20px;
+}
+
 main > h1 {
     justify-content: center;
 }
 
-#img-personalidade {
-    background: url('images/oasis.jpg') no-repeat;
+.img-historia {
     display: block;
     background-size: cover;
+    background-repeat: no-repeat;
     background-position: center center;
     height: 550px;
     width: 500px;
 }
 
-#img-noel-liam {
-    background: url('images/Tour-Bus-October-1994-opt.jpg') no-repeat;
-    display: block;
-    background-size: cover;
-    background-position: center center;
-    height: 550px;
-    width: 500px;
+.img-historia--oasis {
+    background-image: url('images/oasis.jpg');
 }
 
-#img-banda {
-    background: url('images/story-Oasis-by-Jill-Furmanovski-November-1997-credit-icon-Rockarchive.jpg') no-repeat;
-    display: block;
-    background-size: cover;
+.img-historia--noel-liam {
+    background-image: url('images/Tour-Bus-October-1994-opt.jpg');
+}
+
+.img-historia--banda {
+    background-image: url('images/story-Oasis-by-Jill-Furmanovski-November-1997-credit-icon-Rockarchive.jpg');
     background-position: center bottom;
     height: 350px;
     width: 500px;
@@ -123,11 +192,35 @@ main > h1 {
     text-indent: 30px;
 }
 
+main > p {
+    display: flex;
+    justify-content: center;
+    align-items: baseline;
+}
+
+#fonte{
+    background-color: black;
+    color: white;
+    padding: 2px 6px
+}
+
+#fonte::after{
+    content: '\00A0\1F517';
+}
+
+#discografia {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-content: center;
+}
+
 .wrap-bloco-album{
     display: flex;
     flex-direction: row;
     justify-content: center;
     flex-wrap: wrap;
+    max-width: 1000px;
 }
 
 .bloco-album {
@@ -135,7 +228,6 @@ main > h1 {
     flex-direction: column;
     justify-content: baseline;
     align-items: baseline;
-
     max-width: 500px;
     margin: 10px;
     overflow: hidden;
@@ -158,33 +250,111 @@ main > h1 {
     width: 300px;
 }
 
-
-#definitely-maybe {
+.capa-album--definitely-maybe {
     background-image: url('images/Oasis-Packshot-Definitely-Maybel-499x500-1.jpg');
 }
 
-#whats-the-story {
+.capa-album--whats-the-story {
     background-image: url('images/whats-the-story-morning-glory-disc-1-4de93e4bc1c6f-800x800.jpg');
 }
 
-#be-here-now {
+.capa-album--be-here-now {
     background-image: url('images/oasis-be-here-now-cover.jpeg');
 }
 
-#standing {
+.capa-album--standing {
     background-image: url('images/1.jpg');
 }
 
-#heaten-chemistry {
+.capa-album--heaten-chemistry {
     background-image: url('./images/1-2.jpg');
 }
 
-#dont-believe {
+.capa-album--dont-believe {
     background-image: url('./images/Screen-shot-2014-02-07-at-12.10.05-499x500-1.png');
 }
 
-#dig-out {
+.capa-album--dig-out {
     background-image: url('./images/1-3.jpg');
+}
+
+.link-imagem {
+    display: flex;
+    flex-direction: row;
+}
+
+.link-imagem > p {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin: 0px;
+}
+
+.link-imagem > p > a > img {
+    width: 100px;
+    height: 30px;
+    border-radius: 8px;
+}
+
+#bloco-redes {
+    flex-direction: row;
+}
+
+#bloco-redes > a {
+    color: black;
+}
+
+#bloco-redes > a > img {
+    width: 100px;
+    height: 100px;
+    transition-duration: .5s;
+}
+
+#bloco-redes > a > img:hover {
+    width: 120px;
+    height: 120px;
+    transition-duration: .5s;
+}
+
+#bloco-redes > .link {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin: 10px;
+}
+
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    max-width: 1000px;
+}
+
+th {
+    border: 1px solid #000000;
+    text-align: left;
+    padding: 8px;
+}
+
+td {
+    border: 1px solid #000000;
+    text-align: center;
+    padding: 8px;
+}
+
+.fundo-preto {
+    background-color: black;
+    color: white;
+}
+
+.fundo-verde {
+    background-color: rgb(15, 145, 15);
+    color: white;
+}
+
+.fundo-vermelho {
+    background-color: rgb(214, 46, 46);
+    color: white;
 }
 
 footer {
@@ -194,6 +364,8 @@ footer {
     color: white;
     padding: 5px;
     margin-top: auto;
+    flex-wrap: wrap;
+    text-align: center;
 }
 
 footer a {
@@ -206,8 +378,23 @@ footer a {
         height: 300px;
     }
 
-    #img-personalidade, #img-banda {
+    nav {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #header-pagina-inicial {
+        height: 120px;
+    }
+
+    .img-historia--oasis, .img-historia--banda {
         height: 400px;
         width: 400px;
+    }
+
+    .bloco-menu {
+        height: 300px;
+        width: 200px;
+        margin: 5px;
     }
 }
