--- a/aula-14-11/style.css
+++ b/aula-14-11/style.css
@@ -375,7 +375,9 @@ footer a {
 
 @media only screen and (max-width: 768px) {
     header {
-        height: 300px;
+        flex-direction: column;
+        height: auto;
+        align-items: center;
     }
 
     nav {
