--- a/aula-14-11/style.css
+++ b/aula-14-11/style.css
@@ -16,7 +16,7 @@ header {
     flex-direction: row;
     justify-content: space-around;
     width: 100%;
-    height: 130px;
+    height: auto;
     background-color: black;
     color: white;
     padding: 0px;
